--- a/gb/25/7/6/n14545754.md
+++ b/gb/25/7/6/n14545754.md
@@ -10,11 +10,11 @@
 <div class="article">
 <div id="artbody" class="post_content">
 <p>目前台湾各县市7月7日是否停班停课状况如下：</p>
-<p>基隆市｜预计6日晚间8时宣布<br />
-台北市｜预计6日晚间8时宣布<br />
-新北市｜预计6日晚间8时宣布<br />
-桃园市｜预计6日晚间8时宣布<br />
-新竹市｜尚未宣布<br />
+<p>基隆市｜正常上班、正常上课<br />
+台北市｜正常上班、正常上课<br />
+新北市｜正常上班、正常上课<br />
+桃园市｜正常上班、正常上课｜<strong>芦竹区、大园区、观音区、新屋区停止上班、停止上课</strong><br />
+新竹市｜<strong>停止上班、停止上课</strong><br />
 新竹县｜ <strong>停止上班、停止上课</strong></p>
 <p>苗栗县｜<strong>停止上班、停止上课</strong><br />
 台中市｜<strong>停止上班、停止上课</strong><br />
@@ -23,9 +23,9 @@
 南投县｜<strong>停止上班、停止上课</strong></p>
 <p>嘉义市｜尚未宣布<br />
 嘉义县｜尚未宣布<br />
-台南市｜尚未宣布<br />
-高雄市｜尚未宣布<br />
-屏东县｜尚未宣布<br />
+台南市｜<strong>停止上班、停止上课</strong><br />
+高雄市｜<strong>停止上班、停止上课</strong><br />
+屏东县｜<strong>停止上班、停止上课</strong><br />
 宜兰县｜尚未宣布<br />
 花莲县｜尚未宣布<br />
 台东县｜尚未宣布<br />
@@ -33,10 +33,9 @@
 金门县｜尚未宣布<br />
 连江县｜尚未宣布</p>
 <p>停班停课资讯以<ahref="https://www.dgpa.gov.tw/">行政院人事行政总处</a>公布为准。</p>
-<p>资料更新时间：2025年7月6日下午4时47分</p>
+<p>资料更新时间：2025年7月6日晚上8时10分</p>
 <p>责任编辑：李玲</p>
 </div>
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
@@ -49,7 +48,7 @@
 <li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
 <li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/13/n10712571.md#1" target="_blank">林辉：中共地雷战幕后清华师生的惨死</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/7/4/n9353698.md#1" target="_blank">代理法轮功案 律师从无罪辩护到主动控告</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/31/n9789303.md#1" target="_blank">林辉：曾大红大紫的魏巍被批判与软禁的人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/23/n11741059.md#1" target="_blank">遵循“真善忍”打造的音乐盒专卖店</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
